; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/mandoc/extr_dba_write.c_dba_tell.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/mandoc/extr_dba_write.c_dba_tell.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ofp = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [6 x i8] c"ftell\00", align 1
@INT32_MAX = common dso_local global i64 0, align 8
@EOVERFLOW = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [12 x i8] c"ftell = %ld\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @dba_tell() #0 {
  %1 = alloca i64, align 8
  %2 = load i32, i32* @ofp, align 4
  %3 = call i64 @ftell(i32 %2)
  store i64 %3, i64* %1, align 8
  %4 = icmp eq i64 %3, -1
  br i1 %4, label %5, label %7

5:                                                ; preds = %0
  %6 = call i32 (i32, i8*, ...) @err(i32 1, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  br label %7

7:                                                ; preds = %5, %0
  %8 = load i64, i64* %1, align 8
  %9 = load i64, i64* @INT32_MAX, align 8
  %10 = icmp sge i64 %8, %9
  br i1 %10, label %11, label %15

11:                                               ; preds = %7
  %12 = load i32, i32* @EOVERFLOW, align 4
  store i32 %12, i32* @errno, align 4
  %13 = load i64, i64* %1, align 8
  %14 = call i32 (i32, i8*, ...) @err(i32 1, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.1, i64 0, i64 0), i64 %13)
  br label %15

15:                                               ; preds = %11, %7
  %16 = load i64, i64* %1, align 8
  ret i64 %16
}

declare dso_local i64 @ftell(i32) #1

declare dso_local i32 @err(i32, i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
